# factor_forge

./: .gitignore  CLAUDE.md  Codex交接说明_稳定成交基线后的无量上涨因子研究.md  README.md  architecture_changes.md  architecture_mapping.md  backward_compatibility_report.md  cache_design.md  conditional_ic_schema.md  data_definition_audit.md  data_leakage_check.md  factor_combination_architecture.md  factor_combination_schema.md  factor_decay.csv  factor_yearly_ic.csv  feature_schema.md  implementation_summary.md  industry_slice_example.yaml  industry_slice_leakage_report.md  industry_slice_schema.md  leakage_check.md  modified_files.txt  normal_experiment_example.yaml  per_group_ic.py  pyproject.toml  supply_2026_probe.md  supply_baseline_health.md  supply_diagnostics.md  supply_ic_report.json  supply_ic_report.md  supply_neutral_ic.md  supply_research_closure.md  test_report.md  timing_factor_library_schema.md  univariate_factor_metrics.csv  univariate_factor_report.md  value_regression_schema.md  window_scan_ic.csv  window_scan_report.md  低量上涨供给收缩因子与LightGBM特征计算规范.md  (+3 more)
configs/: breakout_frozen_strategy_v1.yaml  breakout_frozen_strategy_v1_ma50.yaml  breakout_frozen_validation.yaml  breakout_process_backtest.yaml  breakout_process_backtest_round2.yaml  breakout_process_backtest_round3_10d.yaml  breakout_process_backtest_round3_20d.yaml  breakout_process_research.yaml  breakout_top30_scenario_backtest.yaml  continuous_move_core_validation.yaml  project.yaml  project_mainboard_moneyflow.yaml  project_sw_l2.yaml
docs/: alpha_research_radar_architecture.md  bullish_divergence_alpha_experiment.md  bullish_divergence_conditional_ml_result_20260716.md  bullish_divergence_double_divergence_h0_h5_oof_20260717.md  bullish_divergence_dt_score_target_alignment_20260717.md  bullish_divergence_e1_result_20260716.md  bullish_divergence_structure_ablation_result_20260717.md  event_episode_ranker.md  (+12 more)
(+612 files in other folders)
