[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "factor-forge"
version = "0.1.0"
description = "Reusable, point-in-time daily equity factor research and backtesting platform"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "numpy>=1.26",
  "pandas>=2.1",
  "pyarrow>=14",
  "pydantic>=2.5",
  "PyYAML>=6.0",
  "python-dotenv>=1.0",
  "typer>=0.9",
]

[project.optional-dependencies]
tushare = ["tushare>=1.4"]
test = ["pytest>=8", "pytest-cov>=5"]

[project.scripts]
factor-forge = "factor_forge.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/factor_forge"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"
