[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "factor-forge"
version = "0.1.0"
description = "Reusable, point-in-time daily equity factor research and backtesting platform"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "numpy>=1.26,<2",
  "pandas>=2.1",
  "pyarrow>=14",
  "pydantic>=2.5",
  "PyYAML>=6.0",
  "python-dotenv>=1.0",
  "typer>=0.9",
]

[project.optional-dependencies]
tushare = ["tushare>=1.4"]
test = ["pytest>=8", "pytest-cov>=5"]
ml = ["lightgbm>=4.3,<5", "scikit-learn>=1.4", "hmmlearn>=0.3.3,<0.4"]
mamba = ["torch>=2.3,<3", "einops>=0.8,<1"]
# pyqlib does not publish wheels for every Windows/Python combination.  Keep it
# separate so the core project and the native LightGBM runner remain installable.
qlib = ["pyqlib==0.9.7", "numpy>=1.26,<2"]

[project.scripts]
factor-forge = "factor_forge.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/factor_forge"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"
